--- a/package.json
+++ b/package.json
@@ -2,26 +2,36 @@
   "name": "ghost-pizza-delivery",
   "version": "0.0.1",
   "description": "Game based on Psychic Pizza Deliverers Go to the Ghost Town",
-  "main": "index.js",
+  "main": "./dist/cli/index.js",
+  "bin": {
+    "pizza": "./dist/cli/index.js"
+  },
   "scripts": {
+    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/cli/index.ts",
+    "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
+    "nodemon": "^1.19.3",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.1.2",
-    "typescript": "next",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.7.0-dev.20191006",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
-    "@types/extendable-immutable": "nigel-daniels/extendable-immutable-typings",
-    "extendable-immutable": "^1.3.3",
-    "immutable": "^4.0.0-rc.12",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "@types/clear": "^0.1.0",
+    "@types/inquirer": "^6.5.0",
+    "@types/node": "^12.7.11",
+    "@types/wu": "^2.1.39",
+    "chalk": "^2.4.2",
+    "clear": "^0.1.0",
+    "commander": "^3.0.2",
+    "inquirer": "^7.0.0",
+    "path": "^0.12.7",
+    "wu": "^2.1.0"
   }
 }
