--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
         "resolveJsonModule": true,
         "strictNullChecks": true,
         "sourceMap": true,
-        "noImplicitAny": true
+        "noImplicitAny": true,
+        "downlevelIteration": true
     }
 }
