--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
   },
   "dependencies": {
     "@types/clear": "^0.1.0",
-    "@types/inquirer": "^6.5.0",
     "@types/node": "^12.7.11",
+    "@types/prompts": "^2.0.1",
     "@types/random-js": "^1.0.31",
     "@types/wu": "^2.1.39",
     "chalk": "^2.4.2",
     "clear": "^0.1.0",
     "commander": "^3.0.2",
-    "inquirer": "^7.0.0",
     "path": "^0.12.7",
+    "prompts": "^2.2.1",
     "random-js": "^2.1.0",
     "wu": "^2.1.0"
   }
