--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pizza": "./dist/cli/index.js"
   },
   "scripts": {
-    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/cli/index.ts",
+    "start": "yarn run ts-node src/cli/index.ts",
     "build": "tsc -p ."
   },
   "keywords": [],
